<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/lavender_fur_texture"
        android:contentDescription="@string/purple_background"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app_title"
        android:textColor="@color/menu_title"
        android:textAllCaps="true"
        android:textSize="50sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/menu_options"
        android:layout_below="@id/title"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="150dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/purple_texture_bg"
            android:scaleType="centerCrop"
            android:contentDescription="@string/menu_background"/>

    </FrameLayout>

</RelativeLayout>