<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="@string/play"
            android:textColor="@color/text"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"/>

        <TextView
            android:id="@+id/stats"
            android:layout_below="@id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="@string/stats"
            android:textColor="@color/text"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:layout_marginBottom="30dp"
            android:clickable="true"/>


        <TextView
            android:id="@+id/help"
            android:layout_below="@id/stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="@string/help"
            android:textColor="@color/text"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:layout_marginBottom="30dp"
            android:clickable="true"/>

    </RelativeLayout>


</FrameLayout>