<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="@string/choose_token"
            android:textColor="@color/text"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/letter_x"
            android:layout_below="@id/prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/letter_x"
            android:textColor="@color/text"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/letter_o"
            android:layout_below="@id/letter_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/letter_o"
            android:textColor="@color/text"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:focusable="true"/>

    </RelativeLayout>
</FrameLayout>