<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".PageThreeHelpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/back"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back_button"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="  Prev"
            android:textColor="@color/colorAccent"
            android:clickable="true"/>

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="@string/pageThree"
            android:textColor="@color/colorAccent"
            android:clickable="true"/>

        <TextView
            android:id="@+id/next"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/next_button"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="Next  "
            android:textColor="@color/colorAccent"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/help_three_image"
            android:layout_width="wrap_content"
            android:layout_height="450dp"
            android:layout_below="@id/back"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/help"
            android:src="@drawable/help_page_three"/>

        <TextView
            android:layout_below="@id/help_three_image"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/help_page_three_message"
            android:textColor="@color/menu_title"/>

    </RelativeLayout>
</ScrollView>
